--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <iframe style="width: 100%; height: 100%:" src="https://learningaboutgimkit.pages.dev/"></iframe>
+  <iframe style="width: 100%; height: 100%;" src="https://learningaboutgimkit.pages.dev/"></iframe>
 </html>
